fix connection details not collapsing

--- a/PopoutsRevamped.css
+++ b/PopoutsRevamped.css
@@ -72,6 +72,7 @@
             z-index: -1;
             opacity: 0.6;
             border-radius: 10px 0 0 10px;
+            mask-image: -webkit-mask-image;
             -webkit-mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2862745098));
           }
         }
@@ -266,10 +267,13 @@
 
                 > .connectedAccountContainerWithMetadata_e6abe8 {
                   &:not(:hover) > .connectedAccount_e6abe8 > .connectedAccountNameContainer_e6abe8 { /* collapse details */
-                    > .text-xs\/normal_cf4812,
-                    > .connectedAccountChildren_e6abe8 {
+                    > .text-xs\/normal_cf4812 {
                       display: none;
                     }
+                  }
+
+                  &:not(:hover) > .connectedAccountChildren_e6abe8 {
+                    display: none;
                   }
 
                   > .connectedAccount_e6abe8 > .connectedAccountNameContainer_e6abe8 > .connectedAccountChildren_e6abe8 { /* fix details */
